--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 <section class="gallery">
   <h2>Gallery</h2>
   <div class="grid">
-    <img src="images/IMG-20251123-WA0000.jpg">
-    <img src="images/IMG-20251123-WA0002.jpg">
-    <img src="images/IMG-20251123-WA0003.jpg">
-    <img src="images/IMG-20251123-WA0004.jpg">
+    <img src="IMG-20251123-WA0000.jpg">
+    <img src="IMG-20251123-WA0002.jpg">
+    <img src="IMG-20251123-WA0003.jpg">
+    <img src="IMG-20251123-WA0004.jpg">
   </div>
 </section>
 
