--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 <header>
     <div class="brand">
         <img src="flag.png" alt="Guatemala Flag" class="flag">
-        <div>
+        <div class="brand-text">
             <h1>Chappin Beanies</h1>
             <p>Handmade Crochet • Any Color • Guatemalan Inspired</p>
         </div>
+        <img src="flag.png" alt="Guatemala Flag" class="flag">
     </div>
 
     <a class="btn primary" href="https://instagram.com/MENDEZ_9021" target="_blank">
@@ -29,24 +30,23 @@
         <li><strong>Medium — $15</strong></li>
         <li><strong>Large — $20</strong></li>
         <li>Delivery Available ✔️</li>
-        <li>Custom Colors — DM Instagram</li>
-        <li>Choose YOUR favorite TEAM COLORS!</li>
+        <li>Custom & Team Colors — Choose ANY colors or your favorite team’s colors. DM Instagram to order.</li>
     </ul>
 </section>
 
 <section class="gallery card">
     <h2>Gallery</h2>
     <div class="grid">
-        <a href="IMG-20251123-WA0004.jpg" target="_blank"><img src="IMG-20251123-WA0004.jpg"></a>
-        <a href="IMG-20251123-WA0002.jpg" target="_blank"><img src="IMG-20251123-WA0002.jpg"></a>
-        <a href="IMG-20251123-WA0003.jpg" target="_blank"><img src="IMG-20251123-WA0003.jpg"></a>
-        <a href="IMG-20251123-WA0000.jpg" target="_blank"><img src="IMG-20251123-WA0000.jpg"></a>
+        <a href="IMG-20251123-WA0004.jpg" target="_blank"><img src="IMG-20251123-WA0004.jpg" alt="Beanie on textiles"></a>
+        <a href="IMG-20251123-WA0002.jpg" target="_blank"><img src="IMG-20251123-WA0002.jpg" alt="Blue beanie"></a>
+        <a href="IMG-20251123-WA0003.jpg" target="_blank"><img src="IMG-20251123-WA0003.jpg" alt="Black beanie"></a>
+        <a href="IMG-20251123-WA0000.jpg" target="_blank"><img src="IMG-20251123-WA0000.jpg" alt="Green beanie"></a>
     </div>
 </section>
 
 <section class="teamcolors card">
-    <h2>Team Colors Available</h2>
-    <p>Tell me your team — NFL, NBA, MLB, College — and I’ll match the colors perfectly!</p>
+    <h2>Custom & Team Colors Available</h2>
+    <p>Tell me your favorite colors or team — NFL, NBA, MLB, College — and I’ll crochet your beanie to match. Just DM me on Instagram.</p>
 </section>
 
 <section class="contact card">
@@ -57,13 +57,17 @@
 
     <div class="buttons">
         <a class="btn" href="https://instagram.com/MENDEZ_9021" target="_blank">Message on Instagram</a>
-        <a class="btn" href="mailto:Mendez_9021@yahoo.com">Order via Email</a>
     </div>
 </section>
 
 <footer>
     © 2025 Chappin Beanies — Handmade with Guatemalan Pride 🇬🇹
 </footer>
+
+<!-- Floating Instagram order button -->
+<a class="float-btn" href="https://instagram.com/MENDEZ_9021" target="_blank">
+    Order on Instagram
+</a>
 
 </body>
 </html>
