Update text to reflect Guatemalan-American theme

--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
 <body>
 
 <header>
-    <div class="brand">
-        <img src="flag.png" alt="Guatemala Flag" class="flag">
+    <div class="hero">
+        <img src="dual-flag.png" alt="Guatemalan American Flag" class="hero-flag">
         <div class="brand-text">
             <h1>Chappin Beanies</h1>
-            <p>Handmade Crochet • Any Color • Guatemalan Inspired</p>
+            <p>Handmade Crochet • Any Color • Guatemalan-American Inspired</p>
         </div>
-        <img src="flag.png" alt="Guatemala Flag" class="flag">
     </div>
 
     <a class="btn primary" href="https://instagram.com/MENDEZ_9021" target="_blank">
@@ -61,7 +60,7 @@
 </section>
 
 <footer>
-    © 2025 Chappin Beanies — Handmade with Guatemalan Pride 🇬🇹
+    © 2025 Chappin Beanies — Handmade with Guatemalan-American Pride 🇬🇹🇺🇸
 </footer>
 
 <!-- Floating Instagram order button -->
