Refactor index.html to streamline content layout

--- a/index.html
+++ b/index.html
@@ -1,64 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chappin Beanies</title>
-    <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Chappin Beanies</title>
+<link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
 <header>
     <img src="dual-flag.png" class="flag-header" alt="Guatemalan American Flag">
     <h1>Chappin Beanies</h1>
     <p class="tagline">Handmade Crochet • Any Color • Guatemalan-American Inspired</p>
-
-    <a href="https://instagram.com/MENDEZ_9021" class="cta-btn" target="_blank">
-        Order Now on Instagram
-    </a>
 </header>
 
-<!-- PRODUCTS ------------------------------------------------------------- -->
+<main>
+    <section class="card">
+        <h2>Products & Pricing</h2>
+        <ul>
+            <li><b>Small — $10</b></li>
+            <li><b>Medium — $15</b></li>
+            <li><b>Large — $20</b></li>
+            <li>Delivery Available ✅</li>
+            <li>Custom & Team Colors — Choose ANY colors or your favorite team’s colors. DM Instagram to order.</li>
+        </ul>
+    </section>
 
-<section class="card" id="products">
-    <h2>Products & Pricing</h2>
+    <section class="card">
+        <h2>Gallery</h2>
+        <div class="grid">
+            <img src="IMG-20251123-WA0000.jpg" alt="Beanie 1">
+            <img src="IMG-20251123-WA0002.jpg" alt="Beanie 2">
+            <img src="IMG-20251123-WA0003.jpg" alt="Beanie 3">
+            <img src="IMG-20251123-WA0004.jpg" alt="Beanie 4">
+        </div>
+    </section>
 
-    <ul>
-        <li><strong>Small — $10</strong></li>
-        <li><strong>Medium — $15</strong></li>
-        <li><strong>Large — $20</strong></li>
-        <li>Delivery Available ✔️</li>
-        <li><strong>Custom & Team Colors</strong> — Choose ANY colors or your favorite team’s colors. DM Instagram to order.</li>
-    </ul>
-</section>
+    <section class="card contact">
+        <h2>Contact</h2>
+        <p>Instagram: <a href="https://instagram.com/MENDEZ_9021" target="_blank">@MENDEZ_9021</a></p>
+        <p>Zelle: mendez_9021@yahoo.com</p>
+        <p>Venmo: @Carlos-O-Mendez-9021</p>
+    </section>
+</main>
 
-<!-- GALLERY -------------------------------------------------------------- -->
-
-<section class="card" id="gallery">
-    <h2>Gallery</h2>
-
-    <div class="grid">
-        <img src="IMG-20251123-WA0000.jpg" alt="">
-        <img src="IMG-20251123-WA0002.jpg" alt="">
-        <img src="IMG-20251123-WA0003.jpg" alt="">
-        <img src="IMG-20251123-WA0004.jpg" alt="">
-    </div>
-</section>
-
-<!-- CONTACT -------------------------------------------------------------- -->
-
-<section class="card" id="contact">
-    <h2>Contact</h2>
-
-    <p>Instagram: <strong>@MENDEZ_9021</strong></p>
-    <p>Zelle: <strong>Mendez_9021@yahoo.com</strong></p>
-    <p>Venmo: <strong>@Carlos-O-Mendez-9021</strong></p>
-
-    <a href="https://instagram.com/MENDEZ_9021" class="contact-btn" target="_blank">
-        Message on Instagram
-    </a>
-</section>
+<a class="floating-ig" href="https://instagram.com/MENDEZ_9021" target="_blank">Order Now on Instagram</a>
 
 </body>
 </html>
