Update header and contact information in index.html

--- a/index.html
+++ b/index.html
@@ -6,61 +6,71 @@
     <title>Chappin Beanies</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-<header>
-    <img src="dual-flag.png" alt="Dual Flag" class="dual-flag">
+<header class="hero">
 
-    <h1>Chappin Beanies</h1>
-    <p class="subtitle">Handmade Crochet • Any Color • Guatemalan-American Inspired</p>
+    <div class="header-row">
 
-    <!-- NEW - Instagram text link under subtitle -->
-    <p class="header-insta">
-        <a href="https://instagram.com/MENDEZ_9021" target="_blank">Order Now on Instagram</a>
-    </p>
+        <!-- LEFT BIRD — QUETZAL -->
+        <img src="quetzal.png" alt="Quetzal Bird" class="side-bird left-bird">
+
+        <div class="title-block">
+            <h1>Chappin Beanies</h1>
+            <p>Handmade Crochet • Any Color • Guatemalan-American Inspired</p>
+
+            <a href="https://instagram.com/mendez_9021" class="insta-main">Order Now on Instagram</a>
+        </div>
+
+        <!-- RIGHT BIRD — AMERICAN BALD EAGLE -->
+        <img src="bald-eagle.png" alt="Bald Eagle" class="side-bird right-bird">
+
+    </div>
+
 </header>
 
-<!-- Floating Instagram Button -->
-<a href="https://instagram.com/MENDEZ_9021" class="float-btn" target="_blank">
-    Order Now
-</a>
 
 <section class="card">
     <h2>Products & Pricing</h2>
-    
-    <!-- REMOVED BULLET DOTS -->
-    <ul class="clean-list">
-        <li><strong>Small — $10</strong></li>
-        <li><strong>Medium — $15</strong></li>
-        <li><strong>Large — $20</strong></li>
+
+    <ul>
+        <li><strong>Small</strong> — $10</li>
+        <li><strong>Medium</strong> — $15</li>
+        <li><strong>Large</strong> — $20</li>
         <li>Delivery Available ✔️</li>
-
-        <!-- NEW LINE ADDED -->
-        <li><strong>Perfect for gifts and holidays 🎁</strong></li>
-
+        <li>Perfect for gifts and holidays</li>
         <li>Custom & Team Colors — Choose ANY colors or your favorite team’s colors. DM Instagram to order.</li>
     </ul>
 </section>
 
 <section class="card">
     <h2>Gallery</h2>
-    <div class="gallery">
 
-        <!-- ADDED target="_blank" TO OPEN IN NEW TAB -->
-        <a href="IMG-20251123-WA0000.jpg" target="_blank"><img src="IMG-20251123-WA0000.jpg"></a>
+    <div class="grid">
+        <a href="IMG-20251123-WA0004.jpg" target="_blank"><img src="IMG-20251123-WA0004.jpg"></a>
         <a href="IMG-20251123-WA0002.jpg" target="_blank"><img src="IMG-20251123-WA0002.jpg"></a>
         <a href="IMG-20251123-WA0003.jpg" target="_blank"><img src="IMG-20251123-WA0003.jpg"></a>
-        <a href="IMG-20251123-WA0004.jpg" target="_blank"><img src="IMG-20251123-WA0004.jpg"></a>
-
+        <a href="IMG-20251123-WA0000.jpg" target="_blank"><img src="IMG-20251123-WA0000.jpg"></a>
     </div>
 </section>
 
 <section class="card">
     <h2>Contact</h2>
-    <p>Instagram: <a href="https://instagram.com/MENDEZ_9021" target="_blank">@MENDEZ_9021</a></p>
-    <p>Zelle: Mendez_9021@yahoo.com</p>
-    <p>Venmo: @Carlos-G-Mendez-9021</p>
+
+    <p>Instagram: <strong>@MENDEZ_9021</strong></p>
+    <p>Zelle: <strong>mendez_9021@yahoo.com</strong></p>
+    <p>Venmo: <strong>@Carlos-O-Mendez-9021</strong></p>
+
+    <div class="contact-links">
+        <a class="button" href="https://instagram.com/mendez_9021" target="_blank">Message on Instagram</a>
+    </div>
 </section>
+
+<!-- Floating insta button -->
+<a href="https://instagram.com/mendez_9021" class="floating-insta" target="_blank">
+    Order Now 💬
+</a>
 
 </body>
 </html>
