--- a/index.html
+++ b/index.html
@@ -1,70 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chappin Beanies</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
 
-<header>
-
-    <img src="quetzal.png" class="side-bird left-bird">
-
-    <div class="flag-center">
-        <img src="dual-flag.png" class="dual-flag">
-    </div>
-
-    <img src="bald-eagle.png" class="side-bird right-bird">
+<header class="top-header">
+    <img src="quetzal.png" class="header-bird left-bird" alt="Quetzal">
+    <img src="dual-flag.png" class="header-flag" alt="Dual Flag">
+    <img src="bald-eagle.png" class="header-bird right-bird" alt="Bald Eagle">
 
     <h1>Chappin Beanies</h1>
-    <p class="tagline">Handmade Crochet • Any Color • Guatemalan-American Inspired</p>
+    <p class="subtitle">Handmade Crochet • Any Color • Guatemalan-American Inspired</p>
 
-    <a href="https://instagram.com/MENDEZ_9021" target="_blank" class="order-link">
-        Order Now DM IG
-    </a>
-
+    <!-- UPDATED TO EMAIL -->
+    <a class="header-order" href="mailto:mendez9021@gmail.com">Order Now — DM via Email</a>
 </header>
 
-
-<section class="products card">
+<div class="card">
     <h2>Products & Pricing</h2>
-    <ul class="clean-list">
+
+    <ul>
         <li><strong>Small — $10</strong></li>
         <li><strong>Medium — $15</strong></li>
         <li><strong>Large — $20</strong></li>
         <li>✔ Delivery Available</li>
-        <li><strong>Perfect for gifts and holidays</strong></li>
-        <li>Custom & Team Colors — Choose ANY colors or your favorite team’s colors. DM Instagram to order.</li>
+        <li>Perfect for gifts and holidays</li>
+        <li>Custom & Team Colors — Choose ANY colors or your favorite team’s colors. Email to order.</li>
     </ul>
-</section>
+</div>
 
-
-<section class="gallery card">
+<div class="card">
     <h2>Gallery</h2>
 
-    <div class="grid">
+    <div class="gallery-grid">
         <a href="IMG-20251123-WA0000.jpg" target="_blank"><img src="IMG-20251123-WA0000.jpg"></a>
         <a href="IMG-20251123-WA0002.jpg" target="_blank"><img src="IMG-20251123-WA0002.jpg"></a>
         <a href="IMG-20251123-WA0003.jpg" target="_blank"><img src="IMG-20251123-WA0003.jpg"></a>
         <a href="IMG-20251123-WA0004.jpg" target="_blank"><img src="IMG-20251123-WA0004.jpg"></a>
     </div>
+</div>
 
-</section>
-
-
-<section class="contact card">
+<div class="card">
     <h2>Contact</h2>
-    <p>Instagram: <strong>@MENDEZ_9021</strong></p>
+
+    <!-- UPDATED EMAIL -->
+    <p>Email: <strong>Mendez9021@gmail.com</strong></p>
+
     <p>Zelle: <strong>Mendez_9021@yahoo.com</strong></p>
     <p>Venmo: <strong>@Carlos-O-Mendez-9021</strong></p>
-</section>
+</div>
 
-
-<a href="https://instagram.com/MENDEZ_9021" target="_blank" class="floating-ig">
-    Order Now DM IG
+<!-- UPDATED FLOATING BUTTON -->
+<a href="mailto:mendez9021@gmail.com" class="floating-ig">
+    Order Now — DM via Email
 </a>
 
 </body>
